# hexapod-ros2-control

./: .dockerignore  .env.prod.sample  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yaml  docker-compose.yaml  hexa  hexapod.sh  pod  sim_stop.py  sim_stop2.py  sim_stop3.py  sim_stop4.py  tmp-hex-dimension.txt
docker/: aliases.sh  entrypoint.sh
docs/: dev-environment.md  leg-phases.md  robot-environment.md  twist-and-cmd-vel.md
scripts/: dev.sh  kill.sh  prod.sh  tmux.sh
src/hexa_bringup/: README.md  package.xml  setup.cfg  setup.py
src/hexa_bringup/config/: ros2_controllers.yaml
src/hexa_bringup/hexa_bringup/tools/: stub_stance_publisher.py
src/hexa_bringup/launch/: prod.launch.py  robot.launch.py  sim.launch.py
src/hexa_control/: README.md  package.xml  setup.cfg  setup.py
src/hexa_control/config/: control.yaml
src/hexa_control/hexa_control/: body_velocity_limiter.py  control_node.py
src/hexa_control/launch/: control.launch.py
src/hexa_control/test/: test_body_velocity_limiter.py
src/hexa_description/: CMakeLists.txt  README.md  package.xml
src/hexa_description/config/: geometry.yaml  joint_limits.yaml  standing_pose.yaml
src/hexa_description/launch/: description.launch.py
src/hexa_description/urdf/: hexapod.gazebo.xacro  hexapod.urdf.xacro
src/hexa_display/: README.md  package.xml  setup.cfg  setup.py
src/hexa_display/config/: display.yaml
src/hexa_display/hexa_display/: __init__.py  display_node.py  expression_policy.py  face_animation.py  protocol.py  transport.py
src/hexa_display/test/: test_display_node_idling.py  test_expression_policy.py  test_face_animation.py  test_protocol.py  test_transport.py
src/hexa_gait/: README.md  package.xml  setup.cfg  setup.py
src/hexa_gait/config/: gait.yaml
src/hexa_gait/hexa_gait/: __init__.py  clock.py  disengagement.py  engagement.py  engine.py  fold.py  gait_node.py  initialize.py  limits.py  pause.py  reseat.py  stability.py  trajectory.py  transition.py
src/hexa_gait/hexa_gait/gaits/: __init__.py  _common.py  base.py  crawl.py  ripple.py  surf.py  tetrapod.py  tripod.py  wave.py
src/hexa_gait/launch/: gait.launch.py
src/hexa_gait/test/: test_clock.py  test_crawl.py  test_disengagement.py  test_engagement.py  test_engine.py  test_fold.py  test_initialize.py  test_limits.py  test_reseat.py  test_reseat_engine.py  test_ripple.py  test_stability.py  test_surf.py  test_trajectory.py  test_transition.py  test_tripod.py  test_wave.py
src/hexa_gait_cpp/: CMakeLists.txt  README.md  package.xml
src/hexa_gait_cpp/config/: gait.yaml
src/hexa_gait_cpp/include/hexa_gait_cpp/: clock.hpp  engagement.hpp  engine.hpp  fold.hpp  initialize.hpp  kinematics.hpp  kinematics_stub.hpp  leg_output.hpp  limits.hpp  pause.hpp  reseat.hpp  stability.hpp  trajectory.hpp  types.hpp  validation.hpp
src/hexa_gait_cpp/include/hexa_gait_cpp/gaits/: base.hpp  common.hpp  registry.hpp
src/hexa_gait_cpp/launch/: gait.launch.py
src/hexa_gait_cpp/src/: clock.cpp  engagement.cpp  engine.cpp  fold.cpp  gait_node.cpp  initialize.cpp  limits.cpp  pause.cpp  reseat.cpp  stability.cpp  trajectory.cpp
src/hexa_gait_cpp/src/gaits/: base.cpp  common.cpp  registry.cpp
src/hexa_hardware/: CMakeLists.txt  README.md  hexa_hardware_plugins.xml  package.xml
src/hexa_hardware/config/: hardware.yaml  servo2040.yaml
src/hexa_hardware/include/hexa_hardware/: board_protocol.hpp  hardware_factory.hpp  hexa_hardware.hpp  i2c_transport.hpp  joint_calibration.hpp  servo2040_protocol.hpp  servo_bus.hpp  transport.hpp  uart_transport.hpp  usb_transport.hpp
src/hexa_hardware/src/: hardware_factory.cpp  hexa_hardware.cpp  i2c_transport.cpp  joint_calibration.cpp  servo2040_protocol.cpp  servo_bus.cpp  uart_transport.cpp  usb_transport.cpp
src/hexa_hardware/test/: test_joint_calibration.cpp  test_servo2040_protocol.cpp  test_servo_bus.cpp
src/hexa_interfaces/: CMakeLists.txt  README.md  package.xml
src/hexa_interfaces/msg/: BodyPose.msg  GaitParams.msg  LegState.msg  LegTargets.msg
src/hexa_kinematics/: README.md  package.xml  setup.cfg  setup.py
src/hexa_kinematics_cpp/: CMakeLists.txt  README.md  package.xml
src/hexa_kinematics_cpp/include/hexa_kinematics_cpp/: body_transform.hpp  joint_config.hpp  leg_geometry.hpp  leg_ik.hpp  leg_specs.hpp  types.hpp  yaml_util.hpp
src/hexa_kinematics_cpp/launch/: kinematics.launch.py
src/hexa_kinematics_cpp/src/: body_transform.cpp  ik_node.cpp  joint_command_bridge.cpp  joint_config.cpp  leg_ik.cpp  leg_specs.cpp
src/hexa_kinematics_cpp/test/: test_body_pose.cpp  test_body_transform.cpp  test_leg_ik.cpp  test_leg_specs.cpp  test_real_config.cpp
src/hexa_posture/: README.md  package.xml  setup.cfg  setup.py
src/hexa_posture/config/: posture.yaml
src/hexa_posture/hexa_posture/: __init__.py  config.py  pose.py  posture_node.py
src/hexa_posture/hexa_posture/animations/: __init__.py  base.py  body_roll_3d.py  breathing.py  gait_bounce.py  gait_sway.py  horizontal_body_roll.py  still.py  vertical_body_roll.py
src/hexa_posture/test/: test_animations.py  test_pose.py  test_posture_node.py
src/hexa_simulation/: CMakeLists.txt  README.md  package.xml
src/hexa_simulation/config/: ros2_controllers.yaml
src/hexa_simulation/launch/: sim.launch.py
src/hexa_simulation/worlds/: empty.sdf
src/hexa_teleop/: README.md  package.xml  setup.cfg  setup.py
src/hexa_teleop/config/: teleop_joy.yaml
src/hexa_teleop/hexa_teleop/: __init__.py  joy_mapping.py  joy_publisher.py  teleop_arbitration.py  teleop_joy.py
src/hexa_teleop/launch/: teleop.launch.py
src/hexa_teleop/test/: test_joy_mapping.py  test_joy_publisher.py  test_teleop_arbitration.py
src/hexa_webteleop/: README.md  package.xml  setup.cfg  setup.py
src/hexa_webteleop/config/: webteleop.yaml
src/hexa_webteleop/hexa_webteleop/: __init__.py  web_mapping.py  webteleop_node.py
src/hexa_webteleop/launch/: webteleop.launch.py
src/hexa_webteleop/test/: test_web_mapping.py
src/hexa_webteleop/web/: index.html  logs.html  logs.js  main.js  styles.css
(+22 files in other folders)
