<?xml version="1.0"?>
<package format="3">
  <name>hexa_display</name>
  <version>0.0.1</version>
  <description>Face relay: maps gait state, cmd_vel, posture and battery into expression/gaze commands for the ESP32 OLED display over UART.</description>
  <maintainer email="olli.moisio@protonmail.com">Olli Moisio</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hexa_interfaces</depend>

  <exec_depend>python3-serial</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
