<?xml version="1.0"?>
<package format="3">
  <name>hexa_gait_cpp</name>
  <version>0.0.1</version>
  <description>C++ port of hexa_gait: the stateful gait engine that turns a
  commanded body velocity into per-leg foot targets. Owns the phase clock and
  the FOLDED/INITIALIZE/STAND/ENGAGING/GAIT/PAUSING/PAUSED/RESUMING/FOLDING/
  RESEATING state machine; gait strategies stay pure (phase, stride, leg) ->
  foot_target functions. Built side-by-side with the Python hexa_gait until the
  cutover. The hexa_kinematics surface is temporarily stubbed
  (kinematics_stub.hpp) until that package is ported.</description>
  <maintainer email="olli.moisio@protonmail.com">Olli Moisio</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hexa_interfaces</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>hexa_description</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
